Add color and utility buttons

--- a/index.html
+++ b/index.html
@@ -7,15 +7,26 @@
     <title>Etch-A-Sketch</title>
     <script src="script.js" defer></script>
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="https://cdn-icons-png.flaticon.com/512/2970/2970785.png">
 </head>
 <body>
     <div id="header">
         <h1>Etch-A-Sketch</h1>
-        <button>Change layout</button>
     </div>
     <div id="main">
+        <div class="sidebar">
+            <button class="black">Black color</button>
+            <button class="rainbow">Rainbow color</button>
+            <button class="shadow">Shadow color</button>
+            <button class="eraser">Eraser</button>
+            <button class="layout">Change layout</button>
+            <button class="grid">Grid</button>
+            <button class="clear">Clear</button>
+        </div>
         <div class="container"></div>
     </div>
-    <div id="footer"></div>
+    <div id="footer">
+        <div class="text">Copyright &nbsp © &nbsp <a href="https://github.com/neizawa">neizawa</a> &nbsp 2022</div>
+    </div>
 </body>
 </html>
